# snakeye

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py
snakeye/: __init__.py
snakeye/cli/: __init__.py  snakeye.py
snakeye/cli/command/: add_dep.py  build_project.py  create_project.py  list_dep.py  publish_project.py
snakeye/common/: exception.py  models.py  toml.py  utils.py
snakeye/dep/: add.py  list.py
snakeye/project/: build.py  create.py  publish.py
snakeye/template/: __init__.txt  readme.txt  setup.txt
