[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "snakeye"
author = "Rizky Ariestiyansyah"
author-email = "onto@valutac.com"
description-file="README.md"
home-page = "https://snakeye.valutac.com"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = ["cleo","pytoml","flit"]

[tool.flit.scripts]
snakeye = "snakeye.cli:main"
